--- a/src/index.css
+++ b/src/index.css
@@ -17,16 +17,22 @@ body {
 
 }
 .container {
-  width: 50%;
+  max-width: 70%;
   height: auto;
   align-self: center;
-
+  border: 0.5em solid #000;
+  padding: 1em;
+  box-shadow: 0 0 3px #333;
 }
 h1 {
   font-size: 5em;
   margin: 0;
   padding: 0;
   line-height: 1;
+}
+p {
+  line-height: 1.2;
+  max-width: 670px;
 }
 
 .cta {
