--- a/src/index.css
+++ b/src/index.css
@@ -17,16 +17,17 @@ body {
 
 }
 .container {
-  max-width: 70%;
+
   height: auto;
   align-self: center;
   
 }
 h1 {
-  font-size: 5em;
+  font-size: calc(104px + 7 * ((100vw - 500px) / 900));
   margin: 0;
   padding: 0;
   line-height: 1;
+  
 }
 p {
   line-height: 1.2;
@@ -36,4 +37,7 @@ p {
 .cta {
   margin-top: 5em;
   font-size: 13px;
+}
+a {
+  color: #000;
 }
