--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
 }
 .wrapper {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   align-items: center;
